--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -181,7 +181,6 @@ nav:
 - 9. WebApps:
     - '9.1 Overview': 'WebApps/01.Overview.md'
     - '9.2 WebApp Basics': 'WebApps/02.WebApp-Basics.md'
-    - '9.3 WebApp Tutorial': 'WebApps/03.WebApp-Tutorial.md'
 - 10. Boards:
     - '10.1 Overview': 'Boards/01.Overview.md'
     - '10.2 Edit Mode': 'Boards/02.Edit-Mode.md'
@@ -213,6 +212,7 @@ nav:
     - 'DataPortal: ETL Logging and Monitoring': 'Tutorial/DataPortals-ETL-Logs.md'
     - 'DataPortal: Online Delivery App': 'Tutorial/DataPortals-DeliveryApp.md'
     - 'DataPortal: Creating a Database and Inserting Data': 'Tutorial/BlueBikesDataPortal.md'
+    - 'WebApp: Creating a Full Stack WebApp': 'Tutorial/WebApp-Tutorial.md'
 - Videos: 'Videos/Composable-Videos.md'
 
 markdown_extensions:
