--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -228,7 +228,7 @@ nav:
 - References: 
     - 'SQL Tutorial':
         - 'SQL Overview': 'SQL/01.SQL.Overview.md'
-        - 'SQL Tutorial': 'SQL/02.SQL.Tutorial.md'
+        - 'SQL Primer': 'SQL/02.SQL.Tutorial.md'
         - 'SQL Advanced Concepts': 'SQL/03.SQL.AdvancedConcepts.md'
 
 markdown_extensions:
