--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -227,9 +227,10 @@ nav:
     - 'Video Tutorials': 'Videos/Composable-Videos.md'
 - References: 
     - 'SQL Tutorial':
-        - 'SQL Overview': 'SQL/01.SQL.Overview.md'
-        - 'SQL Primer': 'SQL/02.SQL.Tutorial.md'
-        - 'SQL Advanced Concepts': 'SQL/03.SQL.AdvancedConcepts.md'
+        - 'SQL Overview': 'References/01.SQL.Overview.md'
+        - 'SQL Primer': 'References/02.SQL.Tutorial.md'
+        - 'SQL Advanced Concepts': 'References/03.SQL.AdvancedConcepts.md'
+    - 'Glossary': 'References/Glossary.md'   
 
 markdown_extensions:
   - admonition
