Update mkdocs.yml to address 404 css bug

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Composable DataOps Platform
-site_url: https://docs.composable.ai
+site_url: https://docs.composable.ai/en/latest/
 site_description: Composable DataOps Platform technical documentation for big data orchestration, automation and analytics
 site_author: Composable Analytics, Inc.
 
